reorg for Docker builds