@@ -1,12 +1,8 @@
-FROM amazoncorretto:20
-
+FROM maven:3.9-amazoncorretto-20
 WORKDIR /app
-
 COPY . .
-
-RUN mkdir -p target
-
-RUN /usr/lib/jvm/java-20-amazon-corretto/bin/javac -d out --module-source-path "./*/src/main/java/" $(find . -name "*.java")
-
-CMD ["/usr/lib/jvm/java-20-amazon-corretto/bin/java", "-ea", "-Xmx4g", "-p", "out", "-m", "isAscii/com.github.pkpkpk.isAscii.Main"]
+RUN mvn clean compile package dependency:copy-dependencies
+ENV CLASSPATH="/app/target/dependency/*"
+# without ea will DCE
+CMD ["/usr/lib/jvm/java-20-amazon-corretto/bin/java", "-ea", "-Xmx4g",  "--add-modules", "jdk.incubator.vector", "-cp", "target/benchmarks.jar", "org.openjdk.jmh.Main"]
 
